Fix: Fix email spacing and colors

--- a/app/mailbox/index.module.scss
+++ b/app/mailbox/index.module.scss
@@ -45,3 +45,8 @@
     }
   }
 }
+.mailItem {
+  &:not(:first-child) {
+    margin-top: 0.05rem;
+  }
+}
